--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <meta property="og:title" content="Tushar Chaudhary" />
     <meta property="og:description" content="Tushar Chaudhary Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="./public/rocket.png" />
+<link rel="icon" type="image/png" href="/rocket.png" />
+<link rel="shortcut icon" href="/rocket.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="./public/rocket.png" />
   </head>
 
   <body>
